[workplace]
exclude = ["example/*", "benches/*"]

[package]
name = "rs_aio_db"
version = "0.7.15"
edition = "2021"
repository = "https://github.com/milen-denev/rs_aio_db"
license = "Apache-2.0"
keywords = ["database", "libsql", "sqlite"]
authors = ["Milen Denev"]
description = "All in one (aka Aio) database with async support. Based on libsql/Sqlite, bevy_reflect and tokio, includes a dead simple API to be used (no SQL needed just pure Rust). Comes with automigration."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql = { version = "0.6", default-features = false, features = ["core"] }
bevy_reflect = "0.15" 
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
stopwatch = "0.0.7"
serde = { version = "1.0", default-features = false, features = ["serde_derive"] }
bincode = "1"
hex = "0.4"