[workspace]

[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_aio_db = "0.7.9"
tokio = "1.39.3"
bevy_reflect = "0.14.1"
stopwatch = "0.0.7"
env_logger = "0.11.5"
serde = "1.0.208"