[workspace]

[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_aio_db = "0.7.2"
env_logger = "0.11.3"
tokio = "1.38.0"
bevy_reflect = "0.14.0"
actix-web = "4.8.0"
serde = "1.0.203"